# monopoly

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: cmake.yml
build.emscripten/: MonopolyWebApp.njsproj  README.md  index.html  interface.js  package.json  server.js  styles.css
src/: Board.cpp  Board.h  CMakeLists.txt  Cards.cpp  Cards.h  DisplayStrings.cpp  DisplayStrings.h  EmscriptenBindings.cpp  Game.cpp  Game.h  GameState.cpp  GameState.h  IInterface.h  Input.h  Interface.cpp  Interface.h  Player.h  Strings.cpp  Strings.h  TestInterface.h
src/app/: main.cpp
src/app/cli/: CMakeLists.txt  CommandLineInterface.h  main.cpp
src/share/: strings.json
test/: CMakeLists.txt  MonopolyTest.runsettings  Test.h  TestBankruptcy.cpp  TestCards.cpp  TestInterface.h  TestMovement.cpp  TestProperty.cpp  TestSpecialSpaces.cpp  TestTrade.cpp
